<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewAlarmActivity"
    android:id="@+id/new_alarm_root_CL">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_title_TV"

        android:text="@string/new_alarm"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorDark"
        android:gravity="center"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_time_picker_TP"

        android:theme="@style/SwitchTheme"
        android:timePickerMode="spinner"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/new_alarm_title_TV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_repeat_TV"

        android:text="@string/repeat"
        android:textSize="20sp"
        android:textColor="@color/colorDark"

        android:layout_marginStart="20dp"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_alarm_time_picker_TP"/>

    <com.lamti.daypicker.DayPicker
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_day_picker_DPV"

        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_alarm_repeat_TV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_alarm_message_TIL"
        android:layout_height="wrap_content"
        android:layout_width="0dp"

        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_alarm_day_picker_DPV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_alarm_message_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:hint="@string/message" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_icons_CL"

        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/new_alarm_cancel_B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_alarm_message_TIL">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_alarm_snooze_TV"

            android:text="@string/snooze"
            android:textSize="20sp"
            android:textColor="@color/colorDark"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_alarm_vibrate_TV"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_alarm_vibrate_TV"

            android:text="@string/vibrate"
            android:textSize="20sp"
            android:textColor="@color/colorDark"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_alarm_snooze_TV"
            app:layout_constraintEnd_toStartOf="@+id/new_alarm_game_TV"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_alarm_game_TV"

            android:text="@string/game"
            android:textSize="20sp"
            android:textColor="@color/colorDark"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_alarm_vibrate_TV"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/new_alarm_snooze_IV"

            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_snooze_32"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/new_alarm_snooze_TV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/new_alarm_snooze_TV"
            app:layout_constraintEnd_toEndOf="@+id/new_alarm_snooze_TV"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/new_alarm_vibrate_IV"

            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_vibration_32"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/new_alarm_vibrate_TV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/new_alarm_vibrate_TV"
            app:layout_constraintEnd_toEndOf="@+id/new_alarm_vibrate_TV"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/new_alarm_game_IV"

            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_videogame_32"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/new_alarm_game_TV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/new_alarm_game_TV"
            app:layout_constraintEnd_toEndOf="@+id/new_alarm_game_TV"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_cancel_B"

        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:background="@drawable/dark_ripple_effect"

        android:layout_marginBottom="24dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_alarm_add_B"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_alarm_add_B"

        android:text="@string/add"
        android:textColor="@color/colorWhite"
        android:background="@drawable/primary_ripple_effect"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        app:layout_constraintTop_toTopOf="@+id/new_alarm_cancel_B"
        app:layout_constraintBottom_toBottomOf="@+id/new_alarm_cancel_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_alarm_cancel_B"/>

</androidx.constraintlayout.widget.ConstraintLayout>